# Natural-Computing-Algorithms

./: .gitignore  NatAlgReport.docx  NatAlgReport.md  NegSelReport.docx  NegSelReport.md  README.md  TASKS.md  WitnessA_Jan28203814.txt  feedback.txt  pyproject.toml  run_cuckoo_all.sh  run_vdetector.sh  validate_before_handin.py  ~$tAlgReport.docx
.github/: copilot-instructions.md
GraphFiles/: CLGraphB.txt  CLGraphC.txt  GCGraphA.txt  GPGraphB.txt
Non-submitttables/: TrainTune.py
configs/: config_A.yaml  config_B.yaml  config_C.yaml
key_results/: WitnessB.txt  WitnessC.txt
nchw73/: ACO.py  GPCStest.py  NADisc-CS-GC.py  NADisc-CS-GP.py  NatAlgDiscrete-copy.py  NatAlgDiscrete.py  NatAlgDiscreteA.py  NatAlgDiscreteB.py  NatAlgDiscreteC.py  NatAlgReal.py  NatAlgRealAB.py  NatAlgRealCS.py  NatAlgRealFF.py  NatAlgRealWO.py  NegSelTesting.py  NegSelTraining.py  REFACTORING.md  TrainTune.py  TrainTuneENHANCE.py  VD_grid_search.py  VD_train.py  WitnessA.txt  WitnessA_nchw73_Dec03125057.txt  WitnessA_nchw73_Dec03144937.txt  WitnessA_nchw73_Dec03223637.txt  WitnessA_nchw73_Dec04134244.txt  WitnessA_nchw73_Dec04135349.txt  WitnessA_nchw73_Dec05121658.txt  WitnessA_nchw73_Dec05121848.txt  WitnessA_nchw73_Dec05121940.txt  WitnessA_nchw73_Dec05122015.txt  WitnessA_nchw73_Dec05122200.txt  WitnessA_nchw73_Dec05122235.txt  WitnessA_nchw73_Dec05122423.txt  WitnessA_nchw73_Dec05122907.txt  WitnessA_nchw73_Dec05122938.txt  WitnessA_nchw73_Nov22154728.txt  WitnessA_nchw73_Nov22162344.txt  WitnessB_nchw73_Dec03144043.txt  WitnessB_nchw73_Dec03154711.txt  (+44 more)
src/: VD_grid_search.py  (+5 more)
(+5 files in other folders)
